Add icons, code refactoring, rename application, add readme, tweak settings, remove Import feature